# pyshs-bib

./: .gitignore  CLAUDE.md  Exemple PySHS.ipynb  LICENSE  README.md  pyproject.toml  pyshs.py  requirements.txt  test_pyshs.py  tests_pyshs.py
.github/workflows/: test.yml
docs/: Exemple PySHS.ipynb  bdd2011.sav  resultats.xlsx
pyshs/: __init__.py  _core.py
test/: test_pyshs.py
