[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyshs"
author = "Émilien Schultz"
author-email = "emilien.schultz@gmail.com"
home-page = "https://github.com/emilienschultz/pyshs-bib"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires-python=">=3.7"
requires=["pandas",
          "numpy",
          "scipy"]
description-file="README.md"
