[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyshs"
author = "Emilien Schultz"
author-email = "emilien.schultz@gmail.com"
home-page = "http://pyshs.fr"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

