[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyshs"
author = "Emilien Schultz"
author-email = "emilien.schultz@gmail.com"
home-page = "https://github.com/emilienschultz/pyshs-bib"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python=">=3.9"
requires = [
    "pandas",
    "numpy",
    "statsmodels",
    "scipy",
    "plotly"
]

